# hand_helper_public

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_camera_demo.ps1  codex_resume_scheduler.py  partitions.csv  requirements.txt  sdkconfig.defaults
alphabet/: 选取词库.md
app/: candidate_scorer.py  config.py  debug_builder.py  debug_tools.py  embedding_store.py  frame_step_scorer.py  main.py  matcher.py  output_state_machine.py  primitive_text_parser.py  rag_reranker.py  rolling_buffer.py  runtime_config.py  schemas.py  seed_data.py  sentence_composer.py  smoothing.py  span_generator.py  span_summary.py  step_aligner.py  storage.py  stream_decoder.py  stream_models.py  wide_filter.py
data/: hand_language_vocabulary_lite.sqlite3  hand_words.sqlite3  vocab_embeddings_bge_small_zh_v1.npy  vocab_embeddings_meta.json  vocab_seed.json
main/: CMakeLists.txt  Kconfig.projbuild  app_ai_pipeline.c  app_ai_pipeline.h  app_camera.c  app_camera.h  app_cloud.c  app_cloud.h  app_common.h  app_display.c  app_display.h  app_hand_detect.cpp  app_hand_detect.h  app_hand_gesture.cpp  app_hand_gesture.h  app_isp.c  app_isp.h  app_output.c  app_output.h  app_ui_layout.h  app_wifi.c  app_wifi.h  idf_component.yml  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c
main/fonts/: lv_font_sign_ui_14.c
scripts/: audit_fixture_results.py  audit_vocab_primitive_similarity.py  build_embeddings.py  debug_match.py  debug_rag_rerank.py  debug_sentence_compose.py  debug_stream.py  http_stream_batch_fixture.py  http_stream_fixture.py  init_db.py  inspect_vocab.py  run_long_sequence_coordination.py  (+2 more)
(+58 files in other folders)
